feat: 新增用户ID逻辑调整